# zeromq-ros

./: .gitignore  Makefile  README.md  index.html  install.sh  params.json  requirements.txt  run.py  setup.py  sidebar.md
.ropeproject/: globalnames
bindings/cpp/: CMakeLists.txt
bindings/cpp/src/: CMakeLists.txt  test.cpp
configs/: pelicans.json
docs/: architecture  coordinator.md  install.md  ns.raml  running.md  setup.md
rethinkdb_data/: log_file
sandbox/: zmqtest.py
scripts/: install_rethink.sh  install_rmc.sh  run_ns.sh  run_uav.sh
tests/: test_simple_lmcp_sender.py  test_simple_sender.py  test_swarm_sender.py
zmqros/: __init__.py  config.py  converter.py  lmcp.py  log.py  master.py  swarm.py  topics.py
zmqros.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
zmqros/afrl/: Readme.html  VICS.xml
zmqros/afrl/cmasi/: AbstractGeometry.py  AbstractZone.py  AirVehicleConfiguration.py  AirVehicleState.py  AreaSearchTask.py  AutomationRequest.py  AutomationResponse.py  CameraAction.py  CameraConfiguration.py  CameraState.py  Circle.py  FlightDirectorAction.py  FlightProfile.py  GimbalAngleAction.py  GimbalConfiguration.py  GimbalPointingMode.py  (+39 more)
zmqros/agent/: heartbeat.py  main.py  ns.py  subscriber.py
zmqros/client/: main.py  nsapi.py  util.py
zmqros/coordinator/: __init__.py  ns.py  swarm.py
zmqros/nameserver/: __init__.py  api.py  config.py  db.py  main.py  routes.py
zmqros/server/: __init__.py  master.py  swarm.py
zmqros/ui/: config.py  pages.py
zui/: __init__.py  config.py  pages.py  routes.py
zui/templates/: add.html  index.html
(+75 files in other folders)
